# graph-mcp-mvp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  Roadmap.md  docker-compose.yml  env.example  justfile  pyproject.toml  roadmap.md
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
app/api/: __init__.py
app/api/routes/: graph.py  workflow.py
app/core/: __init__.py  mcp_client.py  neo4j_client.py
app/engines/: __init__.py  base.py  crewai_engine.py  langgraph_engine.py  schemas.py
scripts/: setup.sh
tests/: __init__.py  conftest.py
tests/test_api/: test_graph.py  test_main.py  test_workflow.py
tests/test_core/: __init__.py  test_mcp_client.py  test_neo4j_client.py
tests/test_engines/: test_crewai_engine.py  test_langgraph_engine.py
